<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/editNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editEndereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_endereco"
            android:inputType="textPostalAddress"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editNome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editCidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cidade"
            android:inputType="text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editEndereco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editCidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editCEP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cep"
            android:inputType="number"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/spinnerEstado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editCEP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTelefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefone"
            android:inputType="phone"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editAniversario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_aniversario"
            android:inputType="date"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/editTelefone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnCalendario" />

        <Button
            android:id="@+id/btnCalendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="196dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerEstado" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>